[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/DialogGraph/Scenes/Nodes/CommentNode.gd" type="Script" id=1]

[node name="CommentNode" type="GraphNode"]
margin_right = 180.0
margin_bottom = 70.0
rect_min_size = Vector2( 180, 70 )
title = "CommentNode"
show_close = true
resizable = true
comment = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 164.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[connection signal="resize_request" from="." to="." method="_on_CommentNode_resize_request"]
[connection signal="focus_exited" from="TextEdit" to="." method="_on_TextEdit_focus_exited"]
[connection signal="mouse_entered" from="TextEdit" to="." method="_on_TextEdit_mouse_entered"]
[connection signal="mouse_exited" from="TextEdit" to="." method="_on_TextEdit_mouse_exited"]
